# wagtail-treebeard

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  justfile  pyproject.toml  ruff.toml  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: lint.yml  nightly.yml  publish.yml  ruff.yml  test.yml
src/wagtail_treebeard/: apps.py  checks.py  constants.py  creation.py  forms.py  models.py  permission_policy.py  permission_tester.py  utils.py  views.py  viewsets.py  wagtail_hooks.py
src/wagtail_treebeard/bulk_actions/: __init__.py  delete.py
src/wagtail_treebeard/choosers/: __init__.py  constants.py  views.py  viewsets.py  widgets.py
src/wagtail_treebeard/static/wagtail_treebeard/js/: treebeard-snippet-chooser.js
src/wagtail_treebeard/templates/wagtail_treebeard/: confirm_add_position.html  index.html  index_results.html  move.html  reorder_children.html  reorder_root_entries.html  reorder_root_items.html
src/wagtail_treebeard/templates/wagtail_treebeard/bulk_actions/: confirm_bulk_delete.html
src/wagtail_treebeard/templates/wagtail_treebeard/cells/: explore_navigate_cell.html
src/wagtail_treebeard/templates/wagtail_treebeard/chooser/: chooser.html  create_step.html  creation_form.html  results.html
src/wagtail_treebeard/templates/wagtail_treebeard/chooser/cells/: navigate_cell.html  title_cell.html
tests/: manage.py  test_bulk_actions.py  test_chooser.py  test_forms.py  test_permissions.py  test_utils.py  test_views.py  test_viewsets.py
tests/testapp/: models.py  permissions.py  settings.py  urls.py  wagtail_hooks.py
tests/testapp/migrations/: 0001_initial.py  0002_custom_permission_models.py  0003_breadcrumb_related_models.py
(+2 files in other folders)
